<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Authentication.Login"
    >
    <!--android:background="@mipmap/back"-->


    <LinearLayout
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:src="@drawable/amrita_logo"/>



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/EmailEditText"
        android:padding="15dp"
        android:background="@drawable/shape_email"
        android:drawablePadding="10dp"
        android:hint="Email"
        android:textColorHint="@color/black"
        android:textColorHighlight="@color/white"/>
    <!--android:drawableLeft="@drawable/ic_person_black_24dp"-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/PasswordEditText"
        android:padding="15dp"
        android:background="@drawable/shape_email"
        android:drawablePadding="10dp"
        android:hint="Password"
        android:textColorHint="@color/black"
        android:inputType="textPassword"

        android:textColorHighlight="@color/white"/>
    <!--android:drawableLeft="@drawable/ic_lock_black_24dp"-->

    <CheckBox
        android:id="@+id/rememberCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember Me"
            android:layout_margin="10dp"
            android:layout_gravity="left"
            android:buttonTint="@color/colorPrimary"
            android:checked="true"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textAllCaps="false"
        android:shadowColor="@android:color/transparent"
        android:padding="14dp"
        android:layout_marginTsop="10dp"
        android:textColor="@color/white"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape_loginb"/>
    </LinearLayout>

</LinearLayout>